--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">My Jenkins Application</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="push_the_button">Push The Button</string>
+    <string name="the_button_was_pressed">The button was pressed</string>
 
 </resources>
